Revise design after adversarial spec review: fix dedup/read-path blockers